--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <button class="btn">START</button>
     <div class="inst">
-        <p>(use arrow left and arrow right buttons to move.)</p>
+        <p>(use arrow left and arrow right keys to move.)</p>
     </div>
 
 </body>
